--- a/oapi.yaml
+++ b/oapi.yaml
@@ -786,7 +786,7 @@ paths:
               type: array
               minItems: 1
               items:
-                $ref: "#/components/schemas/ContractAmount"
+                $ref: "#/components/schemas/ContractAmountFormat"
         description: |-
           List of contract-amount pairs for which to generate payment estimates. Must contain
           at least one contract-amount pair. Each contract must be subscribed to the vault.
@@ -828,7 +828,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/PaymentAcceptanceConfig"
+              $ref: "#/components/schemas/PaymentAcceptanceConfigFormat"
         description: |-
           Payment acceptance configuration including required payment scenarios and optional
           order context. The 'price-scenarios' list must contain at least one contract-amount
@@ -906,7 +906,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/PaymentAcceptanceConfig"
+              $ref: "#/components/schemas/PaymentAcceptanceConfigFormat"
         description: |-
           Partial payment acceptance configuration for updates. Can be used to modify
           the 'documents' list to add or remove compliance document associations, or to
@@ -1160,7 +1160,7 @@ paths:
         content:
           application/json:
             schema:
-              $ref: "#/components/schemas/ContractAmount"
+              $ref: "#/components/schemas/ContractAmountFormat"
         description: |-
           Contract-amount pair for which to generate the qr-codes.
           The amount should represent the desired payment value in the contract's unit.
@@ -1369,7 +1369,16 @@ components:
         Precise representation of a amount combining a raw value with decimal precision
         information. This structure ensures accurate handling of token amounts across 
         different assets with varying decimal places.
-      anyOf:
+      allOf:
+        - $ref: "#/components/schemas/AmountValue"
+        - $ref: "#/components/schemas/AmountRaw"
+    "AmountFormat":
+      type: object
+      description: |-
+        Precise representation of a amount combining a raw value with decimal precision
+        information. This structure ensures accurate handling of token amounts across 
+        different assets with varying decimal places.
+      oneOf:
         - $ref: "#/components/schemas/AmountValue"
         - $ref: "#/components/schemas/AmountRaw"
     "AmountValue":
@@ -1550,6 +1559,7 @@ components:
       type: string
       enum:
         - "image"
+      default: "unknown"
     "MediaMetadata":
       type: object
 
@@ -1585,6 +1595,7 @@ components:
       enum:
         - "crypto-address"
         - "crypto-payment"
+      default: "unknown"
     "QrCodeEncoding":
       type: string
       description: |-
@@ -1593,6 +1604,7 @@ components:
         with cryptocurrency wallets.
       enum:
         - "byte"
+      default: "unknown"
     "QrCodeMetadata":
       type: object
       description: |-
@@ -1711,6 +1723,7 @@ components:
         - "active" # Network is fully operational and accepting new transactions
         - "inactive" # Network is temporarily disabled but may be reactivated
         - "discontinued" # Network is permanently discontinued and will not be reactivated
+      default: "unknown"
     "NetworkInfo":
       type: object
       description: |-
@@ -1805,6 +1818,7 @@ components:
         - "active"
         - "inactive"
         - "discontinued"
+      default: "unknown"
     "AssetInfo":
       type: object
       description: |-
@@ -1906,6 +1920,7 @@ components:
         - "active" # Contract is fully operational and available for payment processing
         - "inactive" # Contract is disabled but may be reactivated
         - "discontinued" # Contract is permanently discontinued and will not be reactivated
+      default: "unknown"
     "ContractInfo":
       type: object
       description: |-
@@ -1972,13 +1987,27 @@ components:
       type: object
       description: |-
         Pairing of a specific contract with a precise amount value.
-        Used throughout the API to specify payment amounts for particular
-        contracts in payment estimates, acceptance, and transaction records.
+        Used in **API responses** to provide complete amount information including
+        both display value and raw precision data.
       properties:
         "contract-id":
           $ref: "#/components/schemas/ContractId"
         "amount":
           $ref: "#/components/schemas/Amount"
+      required:
+        - "contract-id"
+        - "amount"
+    "ContractAmountFormat":
+      type: object
+      description: |-
+        Pairing of a specific contract with a precise amount value.
+        Used in **API requests** to accept amount data in flexible formats,
+        allowing callers to provide either display value or raw precision data.
+      properties:
+        "contract-id":
+          $ref: "#/components/schemas/ContractId"
+        "amount":
+          $ref: "#/components/schemas/AmountFormat"
       required:
         - "contract-id"
         - "amount"
@@ -2087,6 +2116,7 @@ components:
         - "PersonV1"
         - "CustodialV1"
         - "NonCustodialV1"
+      default: "unknown"
     "DocumentData":
       type: object
       oneOf:
@@ -2117,6 +2147,7 @@ components:
         - "accepted"
         - "rejected"
         - "archived"
+      default: "unknown"
     "DocumentStatusDetails":
       type: string
       description: |-
@@ -2150,6 +2181,7 @@ components:
       enum:
         - "PersonNaturalV1"
         - "PersonLegalV1"
+      default: "unknown"
     "PersonName":
       type: string
       description: |-
@@ -2219,6 +2251,7 @@ components:
       enum:
         - "NationalIdentityCard"
         - "Passport"
+      default: "unknown"
     "PersonNaturalIdIssuer":
       type: string
       description: |-
@@ -2293,6 +2326,7 @@ components:
         but may be expanded to include other business registration types.
       enum:
         - "TaxId"
+      default: "unknown"
     "PersonLegalIdIssuer":
       type: string
       description: |-
@@ -2410,6 +2444,7 @@ components:
       enum:
         - "pending"
         - "accepted"
+      default: "unknown"
 
     # Vault - Payment - Estimate
     "PaymentEstimate":
@@ -2522,25 +2557,18 @@ components:
         - "version"
         - "scenarios"
         - "compliance"
-    "PaymentAcceptanceConfig":
+    "PaymentAcceptanceConfigBase":
       type: object
       description: |-
-        Payment acceptance configuration parameters including commercial order 
-        context, payment scenarios, and document associations. Defines the 
-        structure and requirements for payment processing operations.
+        Base configuration for payment acceptance operations containing optional
+        commercial context and document associations. Serves as the foundation for
+        both request and response payment acceptance structures.
       properties:
         "order":
           $ref: "#/components/schemas/PaymentAcceptanceOrder"
           description: |-
             Optional commercial order context providing business information 
             about the transaction being processed.
-        "price-scenarios":
-          type: array
-          description: |-
-            Required payment obligations as contract-amount pairs. Must contain 
-            at least one scenario when creating new payment acceptance.
-          items:
-            $ref: "#/components/schemas/ContractAmount"
         "documents":
           type: array
           description: |-
@@ -2548,6 +2576,40 @@ components:
             acceptance for compliance purposes.
           items:
             $ref: "#/components/schemas/DocumentId"
+    "PaymentAcceptanceConfig":
+      type: object
+      description: |-
+        Complete payment acceptance configuration used in API responses. Provides
+        full amount information with both display values and raw precision data
+        for all payment scenarios.
+      allOf:
+        - $ref: "#/components/schemas/PaymentAcceptanceConfigBase"
+        - type: object
+          properties:
+            "price-scenarios":
+              type: array
+              description: |-
+                Required payment obligations as contract-amount pairs. Must contain 
+                at least one scenario when creating new payment acceptance.
+              items:
+                $ref: "#/components/schemas/ContractAmount"
+    "PaymentAcceptanceConfigFormat":
+      type: object
+      description: |-
+        Payment acceptance configuration for API requests. Accepts amount data
+        in flexible formats, allowing callers to provide either display values
+        or raw precision data for payment scenarios.
+      allOf:
+        - $ref: "#/components/schemas/PaymentAcceptanceConfigBase"
+        - type: object
+          properties:
+            "price-scenarios":
+              type: array
+              description: |-
+                Required payment obligations as contract-amount pairs. Must contain 
+                at least one scenario when creating new payment acceptance.
+              items:
+                $ref: "#/components/schemas/ContractAmountFormat"
     "PaymentAcceptance":
       type: object
       description: |-
@@ -2597,6 +2659,7 @@ components:
         - "confirmed"
         - "expired"
         - "cancelled"
+      default: "unknown"
     "PaymentAcceptanceStatusDetails":
       type: string
       description: |-
@@ -2662,6 +2725,7 @@ components:
         - "expired"
         - "refunding"
         - "refunded"
+      default: "unknown"
 
     # Blockchain
     "BlockchainTransactionId":
@@ -2681,6 +2745,7 @@ components:
         - "waiting" # Transaction submitted to network, awaiting initial confirmation
         - "confirming" # Transaction confirmed but waiting for additional confirmations
         - "confirmed" # Transaction fully confirmed with sufficient network consensus
+      default: "unknown"
     "BlockchainConfirmations":
       type: integer
       description: |-
