--- a/oapi.yaml
+++ b/oapi.yaml
@@ -1558,6 +1558,7 @@ components:
     "MediaType":
       type: string
       enum:
+        - "unknown"
         - "image"
       default: "unknown"
     "MediaMetadata":
@@ -1593,6 +1594,7 @@ components:
         - 'crypto-address': Simple wallet address QR code
         - 'crypto-payment': Payment request with embedded amount and asset details
       enum:
+        - "unknown"
         - "crypto-address"
         - "crypto-payment"
       default: "unknown"
@@ -1603,6 +1605,7 @@ components:
         Currently supports raw byte encoding for maximum compatibility 
         with cryptocurrency wallets.
       enum:
+        - "unknown"
         - "byte"
       default: "unknown"
     "QrCodeMetadata":
@@ -1720,6 +1723,7 @@ components:
         Operational status of a blockchain network indicating its availability
         for new operations and payment processing.
       enum:
+        - "unknown"
         - "active" # Network is fully operational and accepting new transactions
         - "inactive" # Network is temporarily disabled but may be reactivated
         - "discontinued" # Network is permanently discontinued and will not be reactivated
@@ -1815,6 +1819,7 @@ components:
       description: |-
         Operational status of digital asset.
       enum:
+        - "unknown"
         - "active"
         - "inactive"
         - "discontinued"
@@ -1917,6 +1922,7 @@ components:
         Operational status of a contract indicating its availability
         for payment processing.
       enum:
+        - "unknown"
         - "active" # Contract is fully operational and available for payment processing
         - "inactive" # Contract is disabled but may be reactivated
         - "discontinued" # Contract is permanently discontinued and will not be reactivated
@@ -2113,6 +2119,7 @@ components:
       description: |-
         Compliance document classification.
       enum:
+        - "unknown"
         - "PersonV1"
         - "CustodialV1"
         - "NonCustodialV1"
@@ -2142,6 +2149,7 @@ components:
       description: |-
         Document validation status category.
       enum:
+        - "unknown"
         - "pending"
         - "expired"
         - "accepted"
@@ -2179,6 +2187,7 @@ components:
       description: |-
         Person entity classification.
       enum:
+        - "unknown"
         - "PersonNaturalV1"
         - "PersonLegalV1"
       default: "unknown"
@@ -2249,6 +2258,7 @@ components:
       description: |-
         Identification document type.
       enum:
+        - "unknown"
         - "NationalIdentityCard"
         - "Passport"
       default: "unknown"
@@ -2325,6 +2335,7 @@ components:
         verification. Currently limited to tax identification documents 
         but may be expanded to include other business registration types.
       enum:
+        - "unknown"
         - "TaxId"
       default: "unknown"
     "PersonLegalIdIssuer":
@@ -2442,6 +2453,7 @@ components:
         necessary documents have been submitted and validated for a specific 
         contract scenario.
       enum:
+        - "unknown"
         - "pending"
         - "accepted"
       default: "unknown"
@@ -2653,6 +2665,7 @@ components:
         stages in the payment lifecycle from compliance verification through 
         final confirmation or cancellation.
       enum:
+        - "unknown"
         - "compliance"
         - "waiting"
         - "confirming"
@@ -2718,6 +2731,7 @@ components:
         from compliance verification through transaction confirmation or 
         refund processing.
       enum:
+        - "unknown"
         - "compliance"
         - "waiting"
         - "confirming"
@@ -2741,6 +2755,7 @@ components:
         Current confirmation status of a blockchain transaction indicating
         its processing state from initial detection through final confirmation.
       enum:
+        - "unknown"
         - "compliance" # Transaction detected but compliance verification required
         - "waiting" # Transaction submitted to network, awaiting initial confirmation
         - "confirming" # Transaction confirmed but waiting for additional confirmations
